# sturdy-train

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
migrations/2023-06-22-000808_analytics/: down.sql  up.sql
scripts/: obliterate_diesel_migration_version.sh
src/: main.rs  schema.rs
src/analytics/: mod.rs  page_view.rs  routes.rs
src/config/: api_config.rs  mod.rs  postgres.rs
src/core/: constants.rs  mod.rs  response.rs
src/templates/: analytic_event.js  analytic_events.json  analytics_snippet.html  google-analytics-snippet.html  google-analytics.js  hexidecimal.js  index.html  snippet.html  sturdy-analytics.html  sturdy-analytics.js  tracking_snippet.html
