[package]
name = "sturdy-train"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "*"
dotenvy = "*"
serde="*"
sea-orm = { version = "0.11.3", features = [ 'sqlx-sqlite', 'runtime-actix-native-tls',  "macros", 'with-chrono', 'with-json', 'with-uuid', ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
actix-cors = "0.6.4"
[dev-dependencies]
