[package]
name = "sturdy-train"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
dotenvy = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1.0", features = ["postgres", 'extras',] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
actix-cors = "*"
r2d2 = "0.8.10"

[dev-dependencies]

[dependencies.uuid]
version = "1.3.4"
features = [
    'zerocopy',
    "serde",
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]